# tetra_pkg

./: 25-name-video-devices.rules  README.md  configuration.sh  create_udev_rules.sh  iahrs.rules  mapping.sh  mapsave.sh  navigation.sh  startup.sh
ar_track_alvar_ros2/ar_track_alvar/: CMakeLists.txt  IndividualMarkersNoKinect.cpp  package.xml
ar_track_alvar_ros2/ar_track_alvar/include/ar_track_alvar/: Camera.h
ar_track_alvar_ros2/ar_track_alvar/include/ar_track_alvar/filter/: kinect_filtering.h
ar_track_alvar_ros2/ar_track_alvar/src/: Camera.cpp  IndividualMarkersNoKinect.cpp
iahrs_driver_ros2/iahrs_driver/: CMakeLists.txt  package.xml
iahrs_driver_ros2/iahrs_driver/src/: iahrs_driver.cpp
iahrs_driver_ros2/iahrs_msgs/: CMakeLists.txt  package.xml
iahrs_driver_ros2/iahrs_msgs/srv/: AllDataReset.srv  EulerAngleInit.srv  PoseVelocityReset.srv  RebootSensor.srv
tetra/: CMakeLists.txt  package.xml
tetra/include/: rs232.h  rs232_common.c  rs232_common.h
tetra/launch/: tetraDS_configuration.launch.py  tetra_configuration,launch.xml  tetra_configuration.launch.py
tetra/src/: tetra.cpp  tetraDS.cpp
tetra_2dnav/: package.xml  setup.cfg  setup.py
tetra_2dnav/config/: ar_track_alvar_parameter.yaml  backpack_2d.lua  costmap_common_params.yaml  cyglidar_parameter.yaml  ekf_localization.yaml  joy_params.yaml  local_costmap_params.yaml  sick_tim.yaml  teb_local_planner_params.yaml  tetra_nav.yaml  usb_cam_params.yaml
tetra_2dnav/launch/: cartographer_mapping.launch.py  cartographer_mappint.launch.py  cartographer_test.launch.py  depthimage_to_scan.launch.py  nav2_rviz.launch.py  nav2_test.launch.py  nav2_test2.launch.py  navigation2_tetra.launch.py  occupancy_grid.launch.py  rs_poingcloud_r.launch.py  rs_pointcloud_r.launch.py  test.launch.py  tetra_configuration.launch.py  timed_rgbd.launch.py
tetra_2dnav/maps/: 047d9a70-f9e9-11ed-871a-558ffde1544a.pgm  047d9a70-f9e9-11ed-871a-558ffde1544a.yaml  12748450-dfea-11ec-ab5b-1f15702a9239.pgm  12748450-dfea-11ec-ab5b-1f15702a9239.yaml  23bde8c0-f06e-11ec-bd8d-77e48bc54eb5.pgm  23bde8c0-f06e-11ec-bd8d-77e48bc54eb5.yaml  37ea4a60-dfec-11ec-ab5b-1f15702a9239.pgm  37ea4a60-dfec-11ec-ab5b-1f15702a9239.yaml  4cab2a60-e0ae-11ec-9e0c-fbf27268d154.pgm  4cab2a60-e0ae-11ec-9e0c-fbf27268d154.yaml  56c12880-e08e-11ec-a3f0-399dadf3b097.pgm  56c12880-e08e-11ec-a3f0-399dadf3b097.yaml  920f0af0-e634-11ec-9dac-d516a9b410cb.pgm  920f0af0-e634-11ec-9dac-d516a9b410cb.yaml  MCmap.pgm  MCmap.yaml  a1b05800-0754-11ee-991c-5bf0a9576dae.pgm  a1b05800-0754-11ee-991c-5bf0a9576dae.yaml  aa3c0350-0689-11ee-991c-5bf0a9576dae.pgm  aa3c0350-0689-11ee-991c-5bf0a9576dae.yaml  ae7f91a0-dd79-11ec-97ce-31cf2a72884e.pgm  ae7f91a0-dd79-11ec-97ce-31cf2a72884e.yaml  b656b150-f953-11ed-9a50-13099a664f1a.pgm  b656b150-f953-11ed-9a50-13099a664f1a.yaml  cd5b1b80-ead0-11ec-8a30-c5f1ef49c03a.pgm  cd5b1b80-ead0-11ec-8a30-c5f1ef49c03a.yaml  e99e8710-f060-11ec-bd8d-77e48bc54eb5.pgm  e99e8710-f060-11ec-bd8d-77e48bc54eb5.yaml  f714b4f0-e08e-11ec-a3f0-399dadf3b097.pgm  f714b4f0-e08e-11ec-a3f0-399dadf3b097.yaml  fa84d900-05d4-11ee-a605-118ff9624b26.pgm  fa84d900-05d4-11ee-a605-118ff9624b26.yaml  fdf10760-e6ba-11ec-9a60-a35c9af9f30b.pgm  fdf10760-e6ba-11ec-9a60-a35c9af9f30b.yaml  machining_center.pgm  machining_center.yaml  mc.pgm  mc.yaml  office.pgm  office.yaml
tetra_2dnav/odom_nav_config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
tetra_2dnav/param/: backpack_2d.lua  camera.yaml  camera_info.yaml  cyglidar_parameter.yaml  joy_params.yaml  nav2_test (copy).yaml  nav2_test.yaml  nav2_test2.yaml  rs_params.yaml  sick_tim.yaml  test.lua  tetra_nav.yaml  tetra_service.yaml  usb_cam_params.yaml
tetra_2dnav/rviz/: demo_2d.rviz  gmapping.rviz  view_navigation.rviz
tetra_2dnav/tetra_2dnav/: detection_clustering.py  detection_collector.py  detection_publisher.py  publish_fake_random_landmarks.py  robot_global_pose.py  tf_listener.py
tetra_interface/: CMakeLists.txt  package.xml
tetra_interface/include/: rs232.h  rs232_common.h
tetra_interface/src/: power_module.h  tetraDS_interface.cpp  tetra_interface.cpp
tetra_joy/: CMakeLists.txt  package.xml
tetra_joy/src/: tetra_joy_node.cpp
tetra_joystick/: CMakeLists.txt  package.xml
tetra_joystick/launch/: joystick.launch.py
tetra_joystick/src/: joy2cmd.cpp
tetra_landmark/: CMakeLists.txt  package.xml
tetra_landmark/src/: tetraDS_landmark_load.cpp  tetraDS_landmark_save.cpp  tetra_landmark.cpp
tetra_msgs/: CMakeLists.txt  package.xml
tetra_msgs/msg/: Gpio.msg  Obstacles.msg  Obstacles2.msg  Zone.msg  Zone2.msg
tetra_msgs/srv/: Accelerationslop.srv  AngularPositionMove.srv  ConveyorDataRead.srv  ConveyorParameterRead.srv  DeleteDataAll.srv  DeleteLocation.srv  DeleteMap.srv  Deletelandmark.srv  DockingControl.srv  EulerAngleReset.srv  GetInformation.srv  GetMapList.srv  Getlandmarklist.srv  Getlocation.srv  Getlocationlist.srv  GotoLocation.srv  Gotocancel.srv  Gotoconveyor.srv  Gotolocation2.srv  LinearPositionMove.srv  LoadcellCallibration.srv  LoadingCheck.srv  ParameterRead.srv  ParameterWrite.srv  Patrol.srv  PatrolConveyor.srv  PoseEstimate.srv  PowerDataRead.srv  PowerParameterRead.srv  PowerSonarRead.srv  RosNodeKill.srv  RunMapping.srv  Runnavigation.srv  SaveMarker.srv  Servo.srv  SetHomeId.srv  SetInitpose.srv  SetLocation.srv  SetMoveMode.srv  Setekf.srv  (+3 more)
tetra_service/: CMakeLists.txt  package.xml
tetra_service/src/: tetraDS_service.cpp  tetraDS_test.cpp  tetra_service.cpp  tetra_test.cpp
tetra_tcp/: CMakeLists.txt  package.xml
tetra_tcp/launch/: tetraDS_TCP.launch.py
tetra_tcp/src/: tetraDS_TCP.cpp
virtual_costmap_layer/: CMakeLists.txt  costmap_plugins.xml  package.xml
virtual_costmap_layer/include/virtual_costmap_layer/: virtual_layer.hpp
virtual_costmap_layer/src/: virtual_layer.cpp
virtual_costmap_layer2/: CMakeLists.txt  costmap_plugins.xml  package.xml
virtual_costmap_layer2/include/virtual_costmap_layer2/: virtual_layer2.hpp
virtual_costmap_layer2/src/: virtual_layer2.cpp
(+28 files in other folders)
