<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tetra_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jjy0607@hanyang.ac.kr">jo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rmw_implementation</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>PCL</depend>
  <depend>tetra_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
