<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>virtual_costmap_layer2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jjy0607@hanyang.ac.kr">jo</maintainer>
  <license>TODO: License declaration</license>

  <depend>ament_cmake</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tetra_msgs</depend>
  <depend>nav2_costmap_2d</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
